[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-thread-scraper"
version = "2.4.1"
description = "A professional-grade toolkit for extracting threaded conversations from X (formerly Twitter)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "XScraper Development Team", email = "dev@xscraper.internal"}
]
keywords = [
    "twitter",
    "x",
    "scraper",
    "thread",
    "extraction",
    "api",
    "social-media"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "requests-oauthlib>=1.3.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "tenacity>=8.2.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
]
export = [
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
]
cache = [
    "redis>=4.5.0",
    "diskcache>=5.6.0",
]

[project.scripts]
xscraper = "xscraper.main:main"

[project.urls]
Homepage = "https://github.com/xscraper/x-thread-scraper"
Documentation = "https://xscraper-docs.internal"
Repository = "https://github.com/xscraper/x-thread-scraper"
Issues = "https://github.com/xscraper/x-thread-scraper/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["xscraper"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=xscraper --cov-report=term-missing"

[tool.coverage.run]
source = ["src/xscraper"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
